--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>com.github.lsqlebai</groupId>
     <artifactId>server-common</artifactId>
-    <version>0.0.2</version>
+    <version>0.4.1</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -19,11 +19,6 @@
 
     <modelVersion>4.0.0</modelVersion>
     <dependencies>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
@@ -160,7 +155,7 @@
     <developers>
         <developer>
             <name>luoshiqi</name>
-            <email>lsqlebai@sequoiadb.com</email>
+            <email>lsqlebai@163.com</email>
         </developer>
     </developers>
     <scm>
